<resources>
    <string name="app_name">Binary Clock</string>
    <string name="circle_content_desc">Circle</string>

    <string name="settings_title">Settings</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_preferences" translatable="false">PreferencesActivity</string>

    <string name="theme_dialog_message">Would you like to set clock\'s theme to this, too?</string>
    <string name="theme_dialog_positive">Yes</string>
    <string name="theme_dialog_negative">No</string>

    <string name="change_to_default_dialog_message">Are you sure you want to reset all settings to default? It can\'t be undone.</string>
    <string name="change_to_default_dialog_positive">Reset</string>
    <string name="change_to_default_dialog_negative">Cancel</string>

    <string name="look_and_feel_category">Look</string>
        <string name="theme_key" translatable="false">theme</string>
            <string name="theme_title">Theme</string>
                <string name="theme_light">Light</string>
                    <string name="theme_light_value" translatable="false">light</string>
                <string name="theme_dark">Dark</string>
                    <string name="theme_dark_value" translatable="false">dark</string>

        <string name="display_numbers_key" translatable="false">display_numbers</string>
            <string name="display_numbers_title">Display numbers</string>

        <string name="bold_numbers_key" translatable="false">bold_numbers</string>
            <string name="bold_numbers_title">Bold numbers</string>

        <string name="numbers_size_key" translatable="false">numbers_size</string>
            <string name="numbers_size_title">Numbers size</string>
                <string name="numbers_size_tiny">Tiny</string>
                    <string name="numbers_size_tiny_value" translatable="false">16</string>
                <string name="numbers_size_small">Small</string>
                    <string name="numbers_size_small_value" translatable="false">24</string>
                <string name="numbers_size_normal">Normal</string>
                    <string name="numbers_size_normal_value" translatable="false">32</string>
                <string name="numbers_size_big">Big</string>
                    <string name="numbers_size_big_value" translatable="false">40</string>
                <string name="numbers_size_huge">Huge</string>
                    <string name="numbers_size_huge_value" translatable="false">52</string>
                <string name="numbers_size_enormous">Enormous</string>
                    <string name="numbers_size_enormous_value" translatable="false">64</string>

        <string name="fill_circles_key" translatable="false">fill_circles</string>
            <string name="fill_circles_title">Fill circles</string>

        <string name="circle_width_key" translatable="false">circle_width</string>
            <string name="circle_width_title">Circle\'s edge width</string>
                <string name="circle_width_tiny">Tiny</string>
                    <string name="circle_width_tiny_value" translatable="false">2</string>
                <string name="circle_width_small">Small</string>
                    <string name="circle_width_small_value" translatable="false">3</string>
                <string name="circle_width_normal">Normal</string>
                    <string name="circle_width_normal_value" translatable="false">4</string>
                <string name="circle_width_big">Big</string>
                    <string name="circle_width_big_value" translatable="false">6</string>
                <string name="circle_width_huge">Huge</string>
                    <string name="circle_width_huge_value" translatable="false">8</string>
                <string name="circle_width_enormous">Enormous</string>
                    <string name="circle_width_enormous_value" translatable="false">12</string>

    <string name="colors_category">Colors</string>
        <string name="color_background_key" translatable="false">color_background</string>
            <string name="color_background_title">Background</string>

        <string name="color_circle_hour_key" translatable="false">color_circle_hour</string>
            <string name="color_circle_hour_title">Hour\'s circles</string>

        <string name="color_circle_minute_key" translatable="false">color_circle_minute</string>
            <string name="color_circle_minute_title">Minute\'s circles</string>

        <string name="color_circle_second_key" translatable="false">color_circle_second</string>
            <string name="color_circle_second_title">Second\'s circles</string>

        <string name="color_circle_inactive_key" translatable="false">color_circle_inactive</string>
            <string name="color_circle_inactive_title">Inactive circles</string>

        <string name="color_numbers_key" translatable="false">color_numbers</string>
            <string name="color_numbers_title">Numbers</string>

    <string name="other_category">Other</string>
        <string name="reset_to_default_key" translatable="false">reset_to_default</string>
            <string name="reset_to_default_title">Reset to default</string>
                <string name="reset_to_default_summary">WARNING: It\'s irreversible.</string>
</resources>
